style.css
/* CORES PADRÕES DO SITE */
:root {
    --cor-primaria: #00eeff;
}

/*ESTILO GERAL */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: "Poppins", sans-serif;
}

html {
    scroll-behavior: smooth;
}

body {
    background-color: #000;
    /* height: 100vh; */
}

.interface {
    max-width: 1280px;
    margin: 0 auto;
}

.flex {
    display: flex;
}

.btn-contato button {
    padding: 10px 40px;
    font-size: 18px;
    font-weight: 600;
    background-color: var(--cor-primaria);
    border: 0;
    border-radius: 30px;
    cursor: pointer;
    transition: .2s;
}

h2.titulo {
    color: #fff;
    font-size: 38px;
    text-align: center;
}

h2.titulo span {
    color: var(--cor-primaria);
}

button:hover,
form .btn-enviar input:hover {
    box-shadow: 0px 0px 8px var(--cor-primaria);
    transform: scale(1.05);
}

.btn-social button {
    width: 60px;
    height: 60px;
    border-radius: 50%;
    border: none;
    background-color: var(--cor-primaria);
    font-size: 22px;
    cursor: pointer;
    margin: 0 5px;
    transition: .2s;
}

.logo {
    width: 100px;
    height: auto;
}


/* ESTILO DO CABEÇALHO */
header {
    padding: 20px 4%;
}

header>.interface {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

header a {
    color: #7d7d7d;
    text-decoration: none;
    display: inline-block;
    transition: .2s;
}

header nav.menu-desktop a:hover {
    color: #fff;
    transform: scale(1.05);
}

header nav ul {
    list-style-type: none;
}

header nav.menu-desktop ul li {
    display: inline-block;
    padding: 0 40px;
}

/* ESTILO DO MENU MOBILE */
.btn-abrir-menu i {
    color: var(--cor-primaria);
    font-size: 40px;
    display: none;
}

.menu-mobile {
    background-color: #000;
    height: 100vh;
    position: fixed;
    top: 0;
    right: 0;
    z-index: 99999;
    width: 0%;
    overflow: hidden;
    transition: .5s;
}

.menu-mobile.abrir-menu {
    width: 70%;
}

.menu-mobile.abrir-menu~.overlay-menu {
    display: block;
}

.menu-mobile .btn-fechar {
    padding: 20px 5%;
}

.menu-mobile .btn-fechar i {
    color: var(--cor-primaria);
    font-size: 30px;
}

.menu-mobile nav ul {
    text-align: right;
}

.menu-mobile nav ul li a {
    color: #fff;
    font-size: 20px;
    font-weight: 300;
    padding: 20px 8%;
    display: block;
}

.menu-mobile nav ul li a:hover {
    background-color: var(--cor-primaria);
    color: #000;
}

.overlay-menu {
    background-color: #000000ca;
    width: 100%;
    height: 100%;
    position: fixed;
    top: 0;
    left: 0;
    z-index: 88888;
    display: none;
}

/* ESTILO DO TOPO DO SITE */
section.topo-do-site {
    padding: 40px 4%;
}

section.topo-do-site .flex {
    align-items: center;
    justify-content: center;
    gap: 90px;
}

.topo-do-site h1 {
    color: #fff;
    font-size: 42px;
    line-height: 40px;
}

.topo-do-site .txt-topo-site h1 span {
    color: var(--cor-primaria);
}


.topo-do-site .txt-topo-site p {
    color: #fff;
    margin: 40px 0;
}

.topo-do-site .img-topo-site {
    position: relative;
    animation: flutuar 2s ease-in-out infinite alternate;
}


@keyframes flutuar {
    0% {
        top: 0;
    }

    100% {
        top: 30px;
    }
}

/* ESTILOS DAS ESPECIALIDADES */
.carrossel{
    margin: 50px auto;
    width: 100%;
    height: 100px;
    display: flex;
    overflow-x: auto;
    background-color: #2b3943;
    border-radius: 30px;
}

.carrossel::-webkit-scrollbar{
    display: none;
}

.grupo-logos{
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 200px;
    animation: spin 10s infinite linear;
    padding-right: 200px;
}

.logos{
    flex: 0 0 5em;
    height: 5em;
    font-size: 15px;
    border-radius: .2em;
    text-align: center;
    align-content: center;
}

@keyframes spin {
    from{translate: 0;}
    to{translate: -100%;}
}

section.especialidades .flex {
    gap: 60px;
}

.especialidades .especialidades-box {
    color: #fff;
    padding: 40px;
    border-radius: 20px;
    border: 2px solid #FFF;
    margin-top: 45px;
    transition: .2s;
}

.especialidades .especialidades-box:hover {
    transform: scale(1.05);
    box-shadow: 0 0 8px #ffffff7f;
}

.especialidades .especialidades-box i {
    font-size: 70px;
    color: var(--cor-primaria);
}

.especialidades .especialidades-box h3 {
    font-size: 28px;
    margin: 15px 0;
}

/* ESTILOS DO SOBRE */
section.sobre {
    padding: 80px 4%;
}

section.sobre .flex {
    align-items: center;
    gap: 60px;
}

.sobre .txt-sobre {
    color: #fff;
}

.sobre .txt-sobre h2 {
    font-size: 40px;
    line-height: 40px;
    margin-bottom: 30px;
}

.sobre .txt-sobre h2 span {
    color: var(--cor-primaria);
    display: block;
}

.sobre .txt-sobre p {
    margin: 20px 0;
    text-align: justify;
}


/* ESTILO DO PORTFÓLIO */
section.portfolio {
    padding: 80px 4%;
    box-shadow: 0 0 40px 10px #ffffff14;
}

section.portfolio .flex {
    justify-content: space-around;
    margin-top: 60px;
}

.img-port {
    width: 360px;
    height: 460px;
    background-size: cover;
    background-position: 100% 0%;
    transition: 3s;
    cursor: pointer;
    border-radius: 40px;
    position: relative;
}

.img-port:hover {
    background-position: 100% 100%;
}

.overlay {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: #0000008a;
    border-radius: 40px;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 24px;
    font-weight: 600;
    color: #fff;
    opacity: 0;
    transition: .5s;
}

.overlay:hover {
    opacity: 1;
}

/* ESTILO DE SOBREPOSIÇÃO DO PORTIFOLIO */
.modal {
    display: none;
    position: fixed;
    z-index: 999;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.8);
}

.modal-content {
    background: #1e1d1d;
    color: #fff;
    width: 80%;
    max-width: 800px;
    margin: 5% auto;
    padding: 30px;
    border-radius: 12px;
    position: relative;
    animation: fadeIn 0.3s ease-in-out;
}

.modal-img {
    width: 100%;
    margin: 20px 0;
}

.close {
    position: absolute;
    right: 20px;
    top: 10px;
    font-size: 30px;
    cursor: pointer;
}

.modal a{
    color: var(--cor-primaria);   
}

@keyframes fadeIn {
    from { opacity: 0; transform: translateY(-20px); }
    to { opacity: 1; transform: translateY(0); }
}

/* ESTILO DO FORMULÁRIO DE CONTATO */
section.formulario {
    padding: 80px 4%;
}

form {
    max-width: 500px;
    margin: 0 auto;
    display: flex;
    justify-content: center;
    flex-direction: column;
    gap: 10px;
    margin-top: 40px;
}

form input,
form textarea {
    width: 100%;
    background-color: #1e1d1d;
    border: 0;
    outline: 0;
    padding: 20px 15px;
    border-radius: 15px;
    color: #fff;
    font-size: 18px;
}

form textarea {
    resize: none;
    max-height: 200px;
}

form .btn-enviar {
    margin-top: 20px;
    text-align: center;
}

form .btn-enviar input {
    width: 120px;
    background-color: var(--cor-primaria);
    color: #000;
    font-weight: 700;
    cursor: pointer;
    transition: .2s;
}

/* ESTILO DO RADAPÉ */
footer {
    padding: 40px 4%;
    box-shadow: 0 0 40px 10px #ffffff14;
}

footer .flex {
    justify-content: space-between;
}

footer .line-footer {
    padding: 20px 0;
}

.borda {
    border-top: 2px solid var(--cor-primaria);
}

footer .line-footer p i {
    color: var(--cor-primaria);
    font-size: 22px;
}

footer .line-footer p a {
    color: #fff;
}

@media screen and (max-width: 1240px) {

    /* PORTFÓLIO */
    section.portfolio {
        padding: 80px 8%;
    }

    .img-port {
        width: 100%;
        max-width: 360px;
        margin: 0 auto;
    }

    section.portfolio .flex {
        gap: 60px;
    }


}

@media screen and (max-width: 1020px) {

    /* CLASSES GERAIS */
    .flex {
        flex-direction: column;
    }

    .topo-do-site .flex,
    .sobre .flex {
        flex-direction: column-reverse;
    }

    h2.titulo {
        font-size: 34px;
        line-height: 30px;
    }

    /* CABEÇALHO */
    .menu-desktop,
    .btn-contato {
        display: none;
    }

    .btn-abrir-menu i {
        display: block;
    }

    /* TOPO DO SITE */
    section.topo-do-site .flex {
        gap: 40px;
    }

    section.topo-do-site {
        padding: 20px 8%;
    }

    .topo-do-site {
        font-size: 30px;
    }

    .topo-do-site .img-topo-site img {
        width: 100%;
    }

    /* ESPECIALIDADES */
    section.especialidades {
        padding: 40px 8%;
    }

    /* SOBRE */
    section.sobre {
        padding: 80px 8%;
    }

    .sobre .txt-sobre h2 {
        font-size: 34px;
        line-height: 35px;
        text-align: center;
    }

    .btn-social {
        text-align: center;
    }

    .img-sobre img {
        width: 100%;
    }

    /* PORTFÓLIO */
    section.portfolio {
        padding: 80px 8%;
    }

    .img-port {
        width: 100%;
        max-width: 360px;
        margin: 0 auto;
    }

    section.portfolio .flex {
        gap: 60px;
    }

    /* RODAPÉ */
    footer .flex {
        flex-direction: column;
        gap: 30px;
    }

    footer .line-footer {
        text-align: center;
    }
}

